--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-asyncpg==0.26.0
-attrs==22.1.0
-greenlet==1.1.2
-iniconfig==1.1.1
-packaging==21.3
-pluggy==1.0.0
+asyncpg==0.29.0
+attrs==23.1.0
+greenlet==3.0.3
+iniconfig==2.0.0
+packaging==23.2
+pluggy==1.3.0
 py==1.11.0
-pyparsing==3.0.9
+pyparsing==3.1.1
 pytest==6.2.5
 pytest-asyncio==0.15.1
-PyYAML==6.0
-SQLAlchemy==1.4.39
+PyYAML==6.0.1
+SQLAlchemy==2.0.23
 toml==0.10.2
+typing_extensions==4.9.0
